cmake_minimum_required(VERSION 3.10)
message(STATUS "CMAKE Version : ${CMAKE_VERSION}")
project(Cars LANGUAGES C CXX)


string(ASCII 27 Esc)
set(ColourReset "${Esc}[m")
set(ColourBold  "${Esc}[1m")
set(Red         "${Esc}[31m")
set(Green       "${Esc}[32m")
set(Yellow      "${Esc}[33m")
set(Blue        "${Esc}[34m")
set(Magenta     "${Esc}[35m")
set(Cyan        "${Esc}[36m")
set(White       "${Esc}[37m")
set(BoldRed     "${Esc}[1;31m")
set(BoldGreen   "${Esc}[1;32m")
set(BoldYellow  "${Esc}[1;33m")
set(BoldBlue    "${Esc}[1;34m")
set(BoldMagenta "${Esc}[1;35m")
set(BoldCyan    "${Esc}[1;36m")
set(BoldWhite   "${Esc}[1;37m")


set(CMAKE_CXX_STANDARD 17)

file(GLOB sourcecode ${CMAKE_CURRENT_LIST_DIR}/src/*.cpp)
add_executable(carInventoryCheck ${sourcecode})
target_include_directories(carInventoryCheck PUBLIC ${CMAKE_CURRENT_LIST_DIR}/header)